# x1-trans-bot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  rpc_manager.rs  transfer.rs  wallet.rs
