[package]
name = "x1-perf-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-transaction-status = "2.2.1"
tokio = { version = "1.43.0", features = ["full"] }
bip39 = "2.0.0"
rand = "0.8.5"
bs58 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
config = "0.13"
futures = "0.3.28"
url = "2.3.1"
tokio-tungstenite = "0.18.0"
bincode = "1.3.3"
base64 = "0.13.0"
ed25519-dalek = "2.1.1"
hmac = "0.12.1"
sha2 = "0.10.8"